--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,36 @@
-<main>
+<h1>Eat Da Burger</h1>
+
+<h2>Waiting to be devoured...</h2>
+
+<ul>
+    {{#each burger}}
+    {{#if eaten}}
+    {{> burgers/burger-block eaten=false}}
+    {{/if}}
+    {{/each}}
+</ul>
 
 
-</main>
+<ul>
+    {{#each burger}}
+    {{#if eaten}}
+    {{> burgers/burger-block eaten=false}}
+    {{/if}}
+    {{/each}}
+</ul>
+
+<h2>Add a Burger</h2>
+<form class="create-form">
+
+    <div class="form-group">
+        <label for="ca">Burger Name</label>
+        <input type="text" id="ca" name="name">
+    </div>
+
+    <div class="form-group">
+        <label for="yummytime">Tell me about it</label><br>
+
+    </div>
+
+    <button type="submit">Add It</button>
+</form>
