--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
     {{#each burger}}
     {{#if eaten}}
-    {{> burgers/burger-block eaten=false}}
+    {{> burgers/burger-block eaten=true}}
     {{/if}}
     {{/each}}
 </ul>
