--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,36 +1,64 @@
-<h1>Eat Da Burger</h1>
-
-<h2>Waiting to be devoured...</h2>
-
-<ul>
-    {{#each burger}}
-    {{#if eaten}}
-    {{> burgers/burger-block eaten=true}}
-    {{/if}}
-    {{/each}}
-</ul>
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <div class="card-content">
+                    <p class="card-title center-align" style="color: red">
+                        <h1>Eat Da Burger</h1>
+                    </p>
 
 
-<ul>
-    {{#each burger}}
-    {{#if eaten}}
-    {{> burgers/burger-block eaten=false}}
-    {{/if}}
-    {{/each}}
-</ul>
+                    <h2>Waiting to be devoured...</h2>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-    <div class="form-group">
-        <label for="ca">Burger Name</label>
-        <input type="text" id="ca" name="name">
+                    <ul>
+                        {{#each burger}}
+                        {{#if eaten}}
+                        {{> burgers/burger-block eaten=false}}
+                        {{/if}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <div class="card-content">
+                    <p class="card-title center-align" style="color: red">
+                        <h2>Burgers Eaten</h2>
+                    </p>
 
-    <div class="form-group">
-        <label for="yummytime">Tell me about it</label><br>
-
+                    <ul>
+                        {{#each burger}}
+                        {{#if eaten}}
+                        {{> burgers/burger-block eaten=true}}
+                        {{/if}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="container burgerMaker">
+        <div class="row">
+            <div class="card horizontal"></div>
+            <h2>Add a Burger</h2>
+            <form class="create-form">
 
-    <button type="submit">Add It</button>
-</form>
+                <div class="form-group">
+                    <label for="ca">Burger Name</label>
+                    <input type="text" id="ca" name="name">
+                </div>
+
+                <div class="form-group">
+                    <label for="yummytime">Tell me about it</label><br>
+
+                </div>
+
+                <button type="submit">Add It</button>
+            </form>
+        </div>
+    </div>
+    </div>
+</main>
